--- a/FYP/FYP/Views/SuperUser/AddExamController.cshtml
+++ b/FYP/FYP/Views/SuperUser/AddExamController.cshtml
@@ -32,7 +32,10 @@
                             <input type="text" name="Last_Name" class="form-control" placeholder="Example: smith" /><br>
 
                             <label>Password</label>
-                            <input type="password" name="Password" class="form-control" /><br>
+                            <input type="password" name="Password" id="Password" class="form-control" /><br>
+
+                            <label>Confirm Password</label>
+                            <input type="password" name="CPassword" class="form-control" /><br>
 
                             <label>Contact Number</label>
                             <input type="text" name="Contact_No" class="form-control" placeholder="Example: 03001234567"><br>
@@ -50,14 +53,34 @@
 
 <script>
     $(function () {
-        
+
+        jQuery.validator.addMethod("pwcheck",
+            function (value, element, param) {
+                if (this.optional(element)) {
+                    return true;
+                } else if (!/[a-z]/.test(value)) {
+                    return false;
+                } else if (!/[0-9]/.test(value)) {
+                    return false;
+                }
+                else if (!/[a-z0-9]{8,}/.test(value)) {
+                    return false;
+                }
+
+                return true;
+            });
+
         $("form").validate({
             rules: {
                 First_Name: "required",
                 Last_Name: "required",
-                Password: "required", Password: {
+                Password: {
                     required: true,
-                    //minlength: 8,
+                    pwcheck: true,
+                },
+                CPassword: {
+                    required: true,
+                    equalTo: "#Password",
                 },
                 Contact_No: {
                     required: true,
@@ -81,7 +104,11 @@
                 Last_Name: "Please enter Last Name !",
                 Password: {
                     required: "Please enter password!",
-                    //minlength: "Minimum length for your password is 8!",
+                    pwcheck: "Password must contain eight characters minimum, at least one letter and one number!",
+                },
+                CPassword: {
+                    required: "Please enter password!",
+                    equalTo: "Password doesn't match!",
                 },
                 Contact_No: {
                     required: "Please enter a Contact Number !",
