--- a/FYP/FYP/Views/ExamController/CreateExam.cshtml
+++ b/FYP/FYP/Views/ExamController/CreateExam.cshtml
@@ -23,7 +23,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading"><center><b>Create Exam</b></center></div>
                     <div class="panel-body">
@@ -41,7 +41,8 @@
                             <label>Subject</label><br>
                             <select id="subject" multiple="multiple" name="subjects">
                                 <option disabled selected>-No Batch Selected-</option>
-                            </select><br><br>
+                            </select>
+                            <label id="subject-error" class="error" for="subject"></label><br><br>
 
                             <label>Exam Term</label><br>
                             <select id="examTerm" name="examTerm" class="form-control" style="text-align-last:center;">
@@ -66,6 +67,20 @@
 
 <script type="text/javascript">
     $(function () {
+
+        $("form").validate({
+            rules: {
+                subjects: "required",
+                examTerm: "required",
+                examSession: "required",
+            },
+            messages: {
+                subjects: "You have to select minimum one subject!",
+                examTerm: "Please select a exam term!",
+                examSession: "Please enter exam session!",
+            },
+        });
+
 
         $(document).ready(function () {
 
