--- a/FYP/FYP/Views/Shared/ExamControllerLayout.cshtml
+++ b/FYP/FYP/Views/Shared/ExamControllerLayout.cshtml
@@ -6,10 +6,23 @@
     <link href="~/Content/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/css/bootstrap-multiselect.css" rel="stylesheet" />
     <script src="~/Scripts/jquery-1.9.1.min.js"></script>
-    <script src="~/Scripts/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.15.1/jquery.validate.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-    <script src="~/Scripts/bootstrap-datetimepicker.min.js"></script>
     <script src="~/Scripts/bootstrap-multiselect.js"></script>
+    <style>
+        .submit-btn {
+            width: 100%;
+        }
+
+        form .error {
+            color: red;
+        }
+
+        .multiselect-container {
+            width: 100% !important;
+        }
+    </style>
+
 </head>
 <body>
     <nav class="navbar navbar-inverse">
