--- a/FYP/FYP/Views/SuperUser/AddStudent.cshtml
+++ b/FYP/FYP/Views/SuperUser/AddStudent.cshtml
@@ -14,6 +14,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
+                <center><a href="/SuperUser/ManageStudent"><b>Go Back</b></a></center><br>
                 <div class="panel panel-primary">
                     <div class="panel-heading"><center><b>Create An Account For Student</b></center></div>
                     <div class="panel-body">
@@ -30,7 +31,10 @@
                             <input type="text" name="Last_Name" class="form-control" placeholder="Example: smith" /><br>
 
                             <label>Password</label>
-                            <input type="password" name="Password" class="form-control"/><br>
+                            <input type="password" name="Password" id="Password" class="form-control"/><br>
+
+                            <label>Confirm Password</label>
+                            <input type="password" name="CPassword" class="form-control" /><br>
 
                             <label>Contact Number</label>
                             <input type="text" name="Contact_No" class="form-control" placeholder="Example: 0300*******" /><br>
@@ -79,7 +83,6 @@
                         </form>
                     </div>
                 </div>
-                <center><a href="/SuperUser/ManageStudent">Go Back</a></center>
             </div>
         </div>
     </div>
@@ -87,6 +90,22 @@
 
 <script>
     $(function () {
+
+        jQuery.validator.addMethod("pwcheck",
+            function (value, element, param) {
+                if (this.optional(element)) {
+                    return true;
+                } else if (!/[a-z]/.test(value)) {
+                    return false;
+                } else if (!/[0-9]/.test(value)) {
+                    return false;
+                }
+                else if (!/[a-z0-9]{8,}/.test(value)) {
+                    return false;
+                }
+
+                return true;
+            });
 
         $("form").validate({
             rules: {
@@ -97,7 +116,11 @@
                 Section: "required",
                 Password: {
                     required: true,
-                    //minlength: 8,
+                    pwcheck: true,
+                },
+                CPassword: {
+                    required: true,
+                    equalTo: "#Password",
                 },
                 Contact_No: {
                     required: true,
@@ -107,6 +130,7 @@
                 },
                 User_Id: {
                     required: true,
+                    email: true,
                     remote: {
                         url: "/SuperUser/IsUser_IdAvailable",
                         type: "post",
@@ -124,7 +148,11 @@
                 Section: "Please select a section!",
                 Password: {
                     required: "Please enter password!",
-                    //minlength: "Minimum length for your password is 8!",
+                    pwcheck: "Password must contain eight characters minimum, at least one letter and one number!",
+                },
+                CPassword: {
+                    required: "Please enter password!",
+                    equalTo: "Password doesn't match!",
                 },
                 Contact_No: {
                     required: "Please enter a Contact Number!",
@@ -134,7 +162,8 @@
                 },
                 User_Id: {
                     required: "Please enter user id!",
-                    remote: "User id already exists!"
+                    email: "This is not a valid email!",
+                    remote: "User id already exists!",
                 },
 
             },
