--- a/FYP/FYP/Views/SuperUser/ManageFreezeStudents.cshtml
+++ b/FYP/FYP/Views/SuperUser/ManageFreezeStudents.cshtml
@@ -1,6 +1,5 @@
-﻿
-@{
-    ViewBag.Title = "ManageStudent";
+﻿@{
+    ViewBag.Title = "ManageFreezeStudents";
     Layout = "~/Views/Shared/SuperUserLayout.cshtml";
 }
 
@@ -15,24 +14,18 @@
 </style>
 <body>
     <div class="container" id="tablediv" style="border: none; padding: 0px; border-radius: 4px;">
+        @if (ViewBag.freezeerror != null)
+        {
+            <div class="alert alert-danger alert-dismissable fade in">
+                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                <strong>@ViewBag.freezeerror</strong>
+            </div>
+        }
         <h3><b>Manage Students</b></h3>
         <hr>
-
-        <button type="button" class="btn btn-primary" style="width:100%;" onclick="location.href='@Url.Action("AddStudent", "SuperUser",null)'"><span class="glyphicon glyphicon-plus-sign"></span> Add Student</button>
-
         <div class="container" style="border: 1px solid silver; padding: 0px; border-radius: 4px;">
-            <div class="container-fluid" style="background-color: #F4F4F4; padding: 12px; border-radius: 4px;"><span class="glyphicon glyphicon-edit"></span> Students List 
-                @*<aside style="float:right;">
-                    <input type="text" id="search">
-                    <select id="filterlist">
-                        <option selected>None</option>
-                        <option value="Student Id">Student Id</option>
-                        <option value="Student Name">Student Name</option>
-                        <option value="Department">Department</option>
-                        <option value="Batch">Batch</option>
-                        <option value="Section">Section</option>
-                    </select>
-                </aside>*@
+            <div class="container-fluid" style="background-color: #F4F4F4; padding: 12px; border-radius: 4px;">
+                <span class="glyphicon glyphicon-edit"></span> Students List
             </div><br>
             <div class="container table-responsive" id="tablediv">
                 <table class="table table-striped table-bordered">
@@ -57,15 +50,19 @@
                             <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;">&nbsp;&nbsp;<b>@s.Section</b></td>
                             <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;">&nbsp;&nbsp;<b>@s.Contact_No</b></td>
                             <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;">
-
-                                <button type="button" class="btn btn-success" onclick="location.href='@Url.Action("EditStudent","SuperUser", new {User_Id=@s.User_Id},null)'">
-                                    <span class="glyphicon glyphicon-cog"></span> Edit
-                                </button>&nbsp;&nbsp;&nbsp;
                                 
-                                <button type="button" class="btn btn-danger" id="@s.User_Id">
-                                    <span class="glyphicon glyphicon-ban-circle"></span> Deactivate
-                                </button>
-
+                                @if (s.Status == "Active")
+                                {
+                                    <button type="button" class="btn btn-danger" onclick="location.href='@Url.Action("FreezeStudent","SuperUser", new {User_Id=@s.User_Id},null)'">
+                                        Freeze
+                                    </button>
+                                }
+                                else if (s.Status == "Freeze")
+                                {
+                                    <button type="button" class="btn btn-success" onclick="location.href='@Url.Action("UnFreezeStudent","SuperUser", new {User_Id=@s.User_Id},null)'">
+                                        UnFreeeze
+                                    </button>
+                                }
                             </td>
                         </tr>
                     }
@@ -78,33 +75,6 @@
 
 <script>
     $(function () {
-
-        //var selectedvalue = null;
-        //$("#filterlist").change(function () {
-        //    selectedvalue = $("#filterlist").val();
-        //    alert(selectedvalue);
-        //});
-
-        //$("#search").change(function () {
-        //    if (selectedvalue != null)
-        //    {
-        //        $('table th[""]').each(function (index) {
-        //            if (index != 0) {
-
-        //                $row = $(this);
-
-        //                var id = $row.find("td:first").text();
-
-        //                if (id.indexOf(value) != 0) {
-        //                    $(this).hide();
-        //                }
-        //                else {
-        //                    $(this).show();
-        //                }
-        //            }
-        //        });
-        //    }
-        //});
 
         $("tr button:nth-child(2)").click(function () {
             var btnValue = this.id;
