--- a/FYP/FYP/Views/ExamController/ManageExam.cshtml
+++ b/FYP/FYP/Views/ExamController/ManageExam.cshtml
@@ -63,59 +63,62 @@
                     </thead>
                     @foreach (var e in Model)
                     {
-                        <tr>
-                            <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Exam_Id</b></td>
-                            <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Subject_Id</b></td>
-                            <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Total_Marks</b></td>
-                            <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Batch_Id</b></td>
-                            <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Department_Id</b></td>
-                            <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Exam_Session</b></td>
-                            @{
-                                var a = 0;
-                                foreach (var s in e.Schedules)
-                                {
-                                    if (a == 0)
+                        if (e.Schedules.Exam_Id != null)
+                        {
+                            <tr>
+                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Exam_Id</b></td>
+                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Subject_Id</b></td>
+                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Total_Marks</b></td>
+                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Batch_Id</b></td>
+                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Department_Id</b></td>
+                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Exam_Session</b></td>
+                                @{
+                                    var a = 0;
+                                    foreach (var s in e.Schedules)
                                     {
-                                        if (s.Time_From != null && s.Time_To != null)
+                                        if (a == 0)
                                         {
-                                            <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;@s.Time_From <pre>to</pre> @s.Time_To</td>
-                                        }
-                                        else
-                                        {
-                                            <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>Not Scheduled</b></td>
-                                        }
+                                            if (s.Time_From != null && s.Time_To != null)
+                                            {
+                                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;@s.Time_From <pre>to</pre> @s.Time_To</td>
+                                            }
+                                            else
+                                            {
+                                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>Not Scheduled</b></td>
+                                            }
 
-                                        if (s.Room_Id != null)
-                                        {
-                                            <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>Scheduled</b></td>
+                                            if (s.Room_Id != null)
+                                            {
+                                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>Scheduled</b></td>
+                                            }
+                                            else
+                                            {
+                                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>Not Scheduled</b></td>
+                                            }
+                                            break;
                                         }
-                                        else
-                                        {
-                                            <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>Not Scheduled</b></td>
-                                        }
-                                        break;
                                     }
                                 }
-                            }
 
-                            <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Status</b></td>
-                            
-                            <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">
-                                
-                                <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("ExamSchedule","ExamController", new {Exam_Id=@e.Exam_Id},null)'">
-                                    Schedule
-                                </button>
+                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Status</b></td>
 
-                                <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Enrolleds","ExamController", new {Exam_Id=@e.Exam_Id},null)'">
-                                    Enrolleds
-                                </button>
+                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">
 
-                                <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("DropOuts","ExamController", new {Exam_Id=@e.Exam_Id},null)'">
-                                    Drop Outs
-                                </button>
-                                
-                            </td>
-                        </tr>
+                                    <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("ExamSchedule","ExamController", new {Exam_Id=@e.Exam_Id},null)'">
+                                        Schedule
+                                    </button>
+
+                                    <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Enrolleds","ExamController", new {Exam_Id=@e.Exam_Id},null)'">
+                                        Enrolleds
+                                    </button>
+
+                                    <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("DropOuts","ExamController", new {Exam_Id=@e.Exam_Id},null)'">
+                                        Drop Outs
+                                    </button>
+
+                                </td>
+                            </tr>
+                        }
                     }
                 </table>
             </div>
