--- a/FYP/FYP/Views/Shared/ExamControllerLayout.cshtml
+++ b/FYP/FYP/Views/Shared/ExamControllerLayout.cshtml
@@ -37,6 +37,7 @@
                     <li><a href="/ExamController/Index"><span class="glyphicon glyphicon-home"></span>Home</a></li>
                     <li><a href="/ExamController/CreateExam">Create Exam</a></li>
                     <li><a href="/ExamController/ManageExam">Manage Exam</a></li>
+                    <li><a href="/ExamResult/ResultForExamController">Exam Result</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
