--- a/FYP/FYP/Views/Shared/SuperUserLayout.cshtml
+++ b/FYP/FYP/Views/Shared/SuperUserLayout.cshtml
@@ -47,8 +47,8 @@
                     <li><a href="/SuperUser/ManageBatch">Batches</a></li>
                     <li><a href="/SuperUser/ManageSubject">Subjects</a></li>
                     <li><a href="/SuperUser/ManageRoom">Rooms</a></li>
+                    <li><a href="/ExamResult/ResultForSuperUser">Exam Result</a></li>
                     <li><a href="/SuperUser/ManageFreezeStudents">Freeze Students</a></li>
-                    @*<li><a href="#">Exam Result</a></li>*@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
