before adding session and profile

--- a/FYP/FYP/Views/SuperUser/AddExamController.cshtml
+++ b/FYP/FYP/Views/SuperUser/AddExamController.cshtml
@@ -16,6 +16,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
+                <center><a href="/SuperUser/ManageExamController"><b>Go Back</b></a></center><br>
                 <div class="panel panel-primary">
                     <div class="panel-heading"><center><b>Create An Account For Exam Controller</b></center></div>
                     <div class="panel-body">
@@ -45,7 +46,6 @@
                         </form>
                     </div>
                 </div>
-                <center><a href="/SuperUser/ManageExamController">Go Back</a></center>
             </div>
         </div>
     </div>
