--- a/FYP/FYP/Views/ExamController/ManageExam.cshtml
+++ b/FYP/FYP/Views/ExamController/ManageExam.cshtml
@@ -13,11 +13,11 @@
 </head>
 <body>
     <div class="container-fluid" style="border: none; margin: 5px; padding: 5px; border-radius: 4px;">
-        @if (ViewBag.midexamerrors != null)
+        @if (ViewBag.midexamerrors != null && ViewBag.midexamerrors.Count > 0)
         {
             <div class="alert alert-danger alert-dismissable fade in">
                 <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                <strong>Exams for following subjects are not created because they were already created and pending:</strong>
+                <strong>Exams for following subjects are not created because they are already in database:</strong>
                 <ul>
                 @foreach (var e in ViewBag.midexamerrors)
                 {
@@ -26,11 +26,11 @@
                 </ul>
             </div>
         }
-        else if (ViewBag.finalexamerrors != null)
+        else if (ViewBag.finalexamerrors != null && ViewBag.finalexamerrors.Count > 0)
         {
             <div class="alert alert-danger alert-dismissable fade in">
                 <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                <strong>Exams for following subjects are not created because their mid exams were not found in database:</strong>
+                <strong>Exams for following subjects are not created because their conducted mid exams were not found in database:</strong>
                 <ul>
                     @foreach (var e in ViewBag.finalexamerrors)
                 {
@@ -63,61 +63,65 @@
                     </thead>
                     @foreach (var e in Model)
                     {
-                        if (e.Schedules.Exam_Id != null)
+                        foreach (var b in e.Schedules)
                         {
-                            <tr>
-                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Exam_Id</b></td>
-                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Subject_Id</b></td>
-                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Total_Marks</b></td>
-                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Batch_Id</b></td>
-                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Department_Id</b></td>
-                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Exam_Session</b></td>
-                                @{
-                                    var a = 0;
-                                    foreach (var s in e.Schedules)
-                                    {
-                                        if (a == 0)
+                            if (b.Exam_Id != null)
+                            {
+                                <tr>
+                                    <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Exam_Id</b></td>
+                                    <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Subject_Id</b></td>
+                                    <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Total_Marks</b></td>
+                                    <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Batch_Id</b></td>
+                                    <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Department_Id</b></td>
+                                    <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Exam_Session</b></td>
+                                    @{
+                                        var a = 0;
+                                        foreach (var s in e.Schedules)
                                         {
-                                            if (s.Time_From != null && s.Time_To != null)
+                                            if (a == 0)
                                             {
-                                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;@s.Time_From <pre>to</pre> @s.Time_To</td>
-                                            }
-                                            else
-                                            {
-                                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>Not Scheduled</b></td>
-                                            }
+                                                if (s.Time_From != null && s.Time_To != null)
+                                                {
+                                                    <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;@s.Time_From <pre>to</pre> @s.Time_To</td>
+                                                }
+                                                else
+                                                {
+                                                    <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>Not Scheduled</b></td>
+                                                }
 
-                                            if (s.Room_Id != null)
-                                            {
-                                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>Scheduled</b></td>
+                                                if (s.Room_Id != null)
+                                                {
+                                                    <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>Scheduled</b></td>
+                                                }
+                                                else
+                                                {
+                                                    <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>Not Scheduled</b></td>
+                                                }
+                                                break;
                                             }
-                                            else
-                                            {
-                                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>Not Scheduled</b></td>
-                                            }
-                                            break;
                                         }
                                     }
-                                }
 
-                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Status</b></td>
+                                    <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">&nbsp;&nbsp;<b>@e.Status</b></td>
 
-                                <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">
+                                    <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;vertical-align:middle;">
 
-                                    <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("ExamSchedule","ExamController", new {Exam_Id=@e.Exam_Id},null)'">
-                                        Schedule
-                                    </button>
+                                        <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("ExamSchedule","ExamController", new {Exam_Id=@e.Exam_Id},null)'">
+                                            Schedule
+                                        </button>
 
-                                    <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Enrolleds","ExamController", new {Exam_Id=@e.Exam_Id},null)'">
-                                        Enrolleds
-                                    </button>
+                                        <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Enrolleds","ExamController", new {Exam_Id=@e.Exam_Id},null)'">
+                                            Enrolleds
+                                        </button>
 
-                                    <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("DropOuts","ExamController", new {Exam_Id=@e.Exam_Id},null)'">
-                                        Drop Outs
-                                    </button>
+                                        <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("DropOuts","ExamController", new {Exam_Id=@e.Exam_Id},null)'">
+                                            Drop Outs
+                                        </button>
 
-                                </td>
-                            </tr>
+                                    </td>
+                                </tr>
+                                 break;
+                            }
                         }
                     }
                 </table>
