--- a/FYP/FYP/Views/SuperUser/AddTeacher.cshtml
+++ b/FYP/FYP/Views/SuperUser/AddTeacher.cshtml
@@ -9,6 +9,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
+                <center><a href="/SuperUser/ManageTeacher"><b>Go Back</b></a></center><br>
                 <div class="panel panel-primary">
                     <div class="panel-heading"><center><b>Create An Account For Teacher</b></center></div>
                     <div class="panel-body">
@@ -41,7 +42,6 @@
                         </form>
                     </div>
                 </div>
-                <center><a href="/SuperUser/ManageTeacher">Go Back</a></center>
             </div>
         </div>
     </div>
